--- a/xhtml_template.html
+++ b/xhtml_template.html
@@ -11,13 +11,20 @@
 
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
+<h1> Hello, world </h1>
 	<p> your content here</p>
 
 <ul
   <li>Dog</li>
   <li>Dog</li>
-  <li>Dog</li>
 </ul
+
+<ul>
+  <li><a href="https://www.apple.com">link to the apple website </a>
+  here </p></li>
+  <li><a href="https://www.google.com">link to the google website </a>
+  here </p></li>
+  <li><a href="">another page in my site</a> </li>
   <img src="IMG_7780.jpg" alt="a picture of me in Iceland" width="50%" />
 
 
