--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   here </p></li>
   <li><a href="https://www.google.com">link to the google website </a>
   here </p></li>
-  <li><a href="">another page in my site</a> </li>
+  <li><a href="index.html">another page in my site</a> </li>
 
   <a href="mailto:alwyt7@mail.missouri.edu"><img src="IMG_7780.jpg" alt="a picture of me in Iceland" width="50%" />
   </a>
