--- a/index.html
+++ b/index.html
@@ -12,17 +12,20 @@
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 <h1> Hello, world </h1>
-	<p> your content here</p>
+	<p>
+      your content here
+  </p>
 
 
 <ul>
   <li><a href="https://www.apple.com">link to the apple website </a>
-  here </p></li>
+  here </li>
   <li><a href="https://www.google.com">link to the google website </a>
-  here </p></li>
+  here </li>
   <li><a href="index.html">another page in my site</a> </li>
 
-  <a href="mailto:alwyt7@mail.missouri.edu"><img src="IMG_7780.jpg" alt="a picture of me in Iceland" width="50%" />
+  <a href="mailto:alwyt7@mail.missouri.edu">
+    <img src="IMG_7780.jpg" alt="a picture of me in Iceland" width="50%" />
   </a>
 
 
