--- a/xhtml_template.html
+++ b/xhtml_template.html
@@ -12,7 +12,8 @@
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 <h1> Hello, world </h1>
-	<p> your content here</p>
+	<p> Why aren’t koalas actual bears?
+        The don’t meet the koalafications.</p>
 
 
 <ul>
