--- a/xhtml_weisberg.html
+++ b/xhtml_weisberg.html
@@ -18,10 +18,12 @@
 
 <ul>
   <li><a href="https://www.apple.com">link to the apple website </a>
-  here </p></li>
+  here </li>
   <li><a href="https://www.google.com">link to the google website </a>
-  here </p></li>
+  here </li>
   <li><a href="">another page in my site</a> </li>
+
+</ul>
 
   <a href="mailto:alwyt7@mail.missouri.edu"><img src="IMG_7780.jpg" alt="a picture of me in Iceland" width="50%" />
   </a>
