--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 <body>
 <!--This is a comment. It won't show up in your browser, only in the page source-->
 <h1> Hello, world </h1>
-	<p>
-    Why aren’t koalas actual bears?
-       The don’t meet the koalafications.
-  </p>
+	<p> Why aren’t koalas actual bears?
+        The don’t meet the koalafications.</p>
 
 
 <ul>
@@ -23,10 +21,11 @@
   here </li>
   <li><a href="https://www.google.com">link to the google website </a>
   here </li>
-  <li><a href="index.html">another page in my site</a> </li>
+  <li><a href="">another page in my site</a> </li>
 
-  <a href="mailto:alwyt7@mail.missouri.edu">
-    <img src="IMG_7780.jpg" alt="a picture of me in Iceland" width="50%" />
+</ul>
+
+  <a href="mailto:alwyt7@mail.missouri.edu"><img src="IMG_7780.jpg" alt="a picture of me in Iceland" width="50%" />
   </a>
 
 
