--- a/index.html
+++ b/index.html
@@ -4,30 +4,32 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+  <link rel="stylesheet" type="text/css" href="style.css"/>
 	<title>	My first website </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
 </head>
 
 <body>
-<!--This is a comment. It won't show up in your browser, only in the page source-->
-<h1> Hello, world </h1>
-	<p> Why aren’t koalas actual bears?
-        The don’t meet the koalafications.</p>
+  <div id="container">
+      <ul id="nav">
+        <li><a href="https://www.apple.com">Link to the apple website </a> </li>
+        <li><a href="https://www.google.com">Link to the google website </a> </li>
+        <li><a href="file:///Users/alyssaweisberg/Desktop/AlyssaWeisbergclass/oldindexcopy.html">Another page in my site</a> </li>
+      </ul>
+
+<h1 id="title">
+  Hello, world
+</h1>
+
+	<p> Why aren’t koalas actual bears? The don’t meet the koalafications. </p>
+  <p> My name is Alyssa! I am a  junior studying Journalism with an emphasis in design and a minor in hospitality management. I am excited to learn how to code and further develop my design skills in this class. </p>
 
 
-<ul>
-  <li><a href="https://www.apple.com">link to the apple website </a>
-  here </li>
-  <li><a href="https://www.google.com">link to the google website </a>
-  here </li>
-  <li><a href="">another page in my site</a> </li>
-
-</ul>
-
-  <a href="mailto:alwyt7@mail.missouri.edu"><img src="IMG_7780.jpg" alt="a picture of me in Iceland" width="50%" />
+  <a href="mailto:alwyt7@mail.missouri.edu"><img src="IMG_7780.jpg" alt="a picture of me in Iceland" width="100%" />
   </a>
 
+  <p class="caption">Holding an iceberg in Iceland!</p>
 
 </body>
 
