--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul id="nav">
         <li><a href="https://www.apple.com">Link to the apple website </a> </li>
         <li><a href="https://www.google.com">Link to the google website </a> </li>
-        <li><a href="file:///Users/alyssaweisberg/Desktop/AlyssaWeisbergclass/oldindexcopy.html">Another page in my site</a> </li>
+        <li><a href="https://alyssaweisberg/Desktop/AlyssaWeisbergclass/oldindexcopy.html">Another page in my site</a> </li>
       </ul>
 
 <h1 id="title">
