--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <ul id="nav">
         <li><a href="https://www.apple.com">Link to the apple website </a> </li>
         <li><a href="https://www.google.com">Link to the google website </a> </li>
-        <li><a href="ildindexcopy.html">Lilnk to old index</a> </li>
+        <li><a href="oldindexcopy.html">Link to old index</a> </li>
       </ul>
 
 <h1 id="title">
