--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
         <li><a href="https://www.google.com">Link to the google website </a> </li>
         <li><a href="oldindexcopy.html">Link to old index</a> </li>
       </ul>
+  </div>
 
 <h1 id="title">
   Hello, world
