--- a/google_fonts/index.html
+++ b/google_fonts/index.html
@@ -5,7 +5,8 @@
 
 <head>
 	<title>	Your page title goes here </title>
-	<meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <meta http-equiv="content-type" content="text/html;charset=utf-8" />
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700|Merriweather:400,400i,700" rel="stylesheet" />
     <link rel="stylesheet" type="text/css" href="style.css">
     <!-- <style type="text/css">
         body {background-color:yellow;}
@@ -27,7 +28,7 @@
         <h1>Headline goes here</h1>
     </div>
     <!-- end header div -->
-    <p>What do you want? Well, it's Princess Leia, sir. She's been trying to get you on the communicator. I turned it off. I don't want to talk to her. Oh. Well, Princess Leia is wondering about Master Luke. He hasn't come back yet. She doesn't know where he is. I don't know where he is. Nobody knows where he is. What do you mean, nobody knows? Well, uh, you see... Deck Officer. Deck Officer!</p>
+    <p><span class="italic">What do you want?</span Well, it's Princess Leia, sir. She's been trying to get you on the communicator. I turned it off. I don't want to talk to her. Oh. Well, Princess Leia is wondering about Master Luke. He hasn't come back yet. She doesn't know where he is. I don't know where he is. Nobody knows where he is. What do you mean, nobody knows? Well, uh, you see... Deck Officer. Deck Officer!</p>
 
     <p>Laugh it up, fuzz ball. But you didn't see us alone in the south passage. She expressed her true feelings for me. My...! Why, you stuck up...half-witted...scruffy-looking...nerf-herder! Who's scruffy-looking? I must have hit her pretty close to the mark to get her all riled up like that, huh, kid? Why, I guess you don't know everything about women yet? Headquarters personnel, report to command center. Take it easy. Excuse us, please.</p>
 
