type and color assignment

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
+  <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700|Merriweather:400,400i,700" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="style.css"/>
 	<title>	My first website </title>
 	<meta http-equiv="content-type"
@@ -15,15 +16,15 @@
       <ul id="nav">
         <li><a href="https://www.apple.com">Link to the apple website </a> </li>
         <li><a href="https://www.google.com">Link to the google website </a> </li>
-        <li><a href="oldindexcopy.html">Link to old index</a> </li>
+        <li><a href="oldindexcopy.html">Link to the old index</a> </li>
       </ul>
   </div>
 
 <h1 id="title">
-  Hello, world
+  Hello, world!
 </h1>
 
-	<p> Why aren’t koalas actual bears? The don’t meet the koalafications. </p>
+	<p><span class="italic">Why aren’t koalas actual bears? They don’t meet the koalafications!</span</p>
   <p> My name is Alyssa! I am a  junior studying Journalism with an emphasis in design and a minor in hospitality management. I am excited to learn how to code and further develop my design skills in this class. </p>
 
 
