--- a/index.html
+++ b/index.html
@@ -6,13 +6,14 @@
 <head>
   <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,400i,700|Merriweather:400,400i,700" rel="stylesheet" />
   <link rel="stylesheet" type="text/css" href="style.css"/>
+  <link rel="stylesheet" href="flexbox.css"/>
 	<title>	My first website </title>
 	<meta http-equiv="content-type"
 		content="text/html;charset=utf-8" />
 </head>
 
 <body>
-  <div id="container">
+  <div class="container">
       <ul id="nav">
         <li><a href="https://www.apple.com">Link to the apple website </a> </li>
         <li><a href="https://www.google.com">Link to the google website </a> </li>
